force-app/main/default/objects/Campaign/fields/Actual_Direct_Calling__c.field-meta.xml
<CustomField>
    <fullName>Actual_Direct_Calling__c</fullName>
    <description>Field to calculate total number of actual direct calling, calculation under event flow</description>
    <label>Actual Direct Calling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>