force-app/main/default/objects/Campaign/fields/Actual_Door_Hanger__c.field-meta.xml
<CustomField>
    <fullName>Actual_Door_Hanger__c</fullName>
    <description>Field to store total actual door hanger information, calculation based on event flow</description>
    <label>Actual Door Hanger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>