force-app/main/default/objects/Campaign/fields/Actual_Door_Knocking__c.field-meta.xml
<CustomField>
    <fullName>Actual_Door_Knocking__c</fullName>
    <description>Sum of actual door knocking activities, calculation via event flow</description>
    <inlineHelpText>Sum of actual door knocking activities</inlineHelpText>
    <label>Actual Door Knocking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>