force-app/main/default/objects/Campaign/fields/Actual_Flyers_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Actual_Flyers_Dropped__c</fullName>
    <description>Total number of actual flyers distributed under the campaign, total figure calculated with event flow</description>
    <label>Actual Flyers Dropped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>