force-app/main/default/objects/Campaign/fields/Actual_Stand_or_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Stand_or_Presentation__c</fullName>
    <description>Field to calculate total actual stand or presentation events, calculation under event flow</description>
    <label>Actual Stand or Presentation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>