force-app/main/default/objects/Campaign/fields/Planned_Direct_Calling__c.field-meta.xml
<CustomField>
    <fullName>Planned_Direct_Calling__c</fullName>
    <description>Field to calculate total planned direct calling, calculation done under event flow</description>
    <label>Planned Direct Calling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>