force-app/main/default/objects/Campaign/fields/Planned_Door_Hanger__c.field-meta.xml
<CustomField>
    <fullName>Planned_Door_Hanger__c</fullName>
    <description>Field to calculate planned door hanger totals, calculation based on event flow</description>
    <label>Planned Door Hanger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>