force-app/main/default/objects/Campaign/fields/Planned_Door_Knocking__c.field-meta.xml
<CustomField>
    <fullName>Planned_Door_Knocking__c</fullName>
    <description>Field to indicate total planned door knockings for a campaing based on related events, calculation under event flow</description>
    <label>Planned Door Knocking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>