force-app/main/default/objects/Campaign/fields/Planned_Flyers_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Planned_Flyers_Dropped__c</fullName>
    <description>Field to measure planned number of flyers distributed, totals calculated with event flow</description>
    <label>Planned Flyers Dropped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>