force-app/main/default/objects/Campaign/fields/Planned_Stand_or_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Planned_Stand_or_Presentation__c</fullName>
    <description>Field to calculate total planned stand or presentation activities, calculation under event flow</description>
    <label>Planned Stand or Presentation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>